adedd post route for owned items
