# apigateway/code/swagger/users.yaml
@@ -391,6 +391,34 @@ paths:
           description: "Owned item updated successfully"
         404:
           description: "Owned item not found"
+    post:
+      summary: "Add a new owned item for a specific user"
+      tags:
+        - Users
+      parameters:
+        - in: path
+          name: userID
+          required: true
+          description: "The user ID"
+          schema:
+            type: integer
+        - in: query
+          name: badgeID
+          required: true
+          description: "The badge ID"
+          schema:
+            type: integer
+        - in: query
+          name: itemPrice
+          required: true
+          description: "The item price"
+          schema:
+            type: integer
+      responses:
+        201:
+          description: "Owned item added successfully"
+        400:
+          description: "Invalid input"
 definitions:
   User:
     type: object
